apps/clubs/veloom/wordpress/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: veloom-svc
spec:
  selector:
    app: veloom
  ports:
    - name: http
      targetPort: 80
      protocol: TCP
      port: 80
