apps/clubs/veloom/wordpress/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: veloom-wordpress-allow-all
  namespace: veloom
spec:
  podSelector:
    matchLabels:
      app: veloom
      tier: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: veloom-mysql-allow-all
  namespace: veloom
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
